# seed-api-actix-v2

./: .env.sample  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
src/: main.rs
src/api/: mod.rs
src/api/framework/api_key/: component.rs  dao.rs  dbo.rs  mod.rs  mongo_repository.rs  service.rs
src/api/swagger/: mod.rs
src/api/todos/: mod.rs  todos_component.rs  todos_dbo.rs  todos_event_mongo_repository.rs  todos_mongo_dao.rs  todos_mongo_repository.rs
src/api/todos/mappers/: events.rs  mod.rs  states.rs
src/api/todos/query/: mod.rs
src/api/todos/routes/: exemple_wit_api_key_routes.rs  read_routes.rs  write_routes.rs
src/api/todos/services/: mod.rs
src/core/: mod.rs
src/core/framework/: mod.rs
src/core/framework/api_key/: data.rs  mod.rs  repository.rs  service.rs
src/core/framework/api_key/services/: api_key_service.rs  impl_api_key_service.rs  mod.rs
src/core/todos/: mod.rs
src/core/todos/command_handler/: create_handler.rs  disable_handler.rs  update_handler.rs
src/core/todos/data/: mod.rs  todo_data.rs
src/core/todos/data/events/: mod.rs
src/core/todos/data/states/: mod.rs  (+2 more)
src/core/todos/reducer/: mod.rs
src/core/todos/repositories/: mod.rs
src/core/todos/services/: mod.rs
src/models/framework/api_key/: commands.rs  views.rs
src/models/todos/commands/: mod.rs
src/models/todos/views/: mod.rs
tests/unit_tests/: mod.rs
tests/unit_tests/api_key_service_spec/: build_mock_api_key_repo.rs  mock_api_repo_exist_name.rs  mock_api_repo_without_data.rs  mod.rs
tests/unit_tests/core/todos/: mod.rs
(+10 files in other folders)
