[package]
name = "seed-api-actix-v2"
version = "0.1.1"
edition = "2021"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = "0.9.66"

[dev-dependencies]
mockall = "0.13.0"

[dependencies]
env_logger = "0.11.5"
framework-cqrs-lib = "0.5.0"
actix-web = { version = "4" }
actix-cors = "0.7.0"
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
serde_json = "1.0.118"
futures = "0.3.30"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
easy-auth = "0.3.0"
passwords = { version = "3.1.16", features = ["crypto", "common-password"]}
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.mongodb]
version = "3.0.0"
features = ["sync"]
[dependencies.uuid]
version = "1.9.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
